--- a/_posts/etc/2019-12-04-History.md
+++ b/_posts/etc/2019-12-04-History.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: "History"
+categories: junk
+author: "Bart Simpson"
+meta: "Springfield"
+---
+
 ## HEAD
 
 ### Documentation
