--- a/_posts/rms46/2020-01-04-rms46-hello.md
+++ b/_posts/rms46/2020-01-04-rms46-hello.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Hello Post"
+title: "Hello Log"
 categories: junk
 author: "RMS46"
 meta: "Springfield"
 ---
 
-This is a post.
+This is a log.
 
