--- a/_posts/cbk/2019-12-04-History.md
+++ b/_posts/cbk/2019-12-04-History.md
@@ -1,9 +1,8 @@
 ---
 layout: post
 title: "History"
-categories: junk
-author: "Bart Simpson"
-meta: "Springfield"
+author: Cicak Bin Kadak
+categories: etc cbk
 ---
 
 ## HEAD
