--- a/_posts/cbk/2019-12-01-short.md
+++ b/_posts/cbk/2019-12-01-short.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: "A Short Post Example"
-categories: misc
+author: Cicak Bin Kadak
+categories: etc cbk
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
