--- a/_posts/rms46/2020-01-06-log.md
+++ b/_posts/rms46/2020-01-06-log.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: "Hello LOG"
+title: "Log Date"
 categories: log rms46
+date: 2020-01-08
 author: "RMS46"
 ---
 
-This is a log.
+Bandingkan date Front Matter di atas dengan nama berkas!
 
