--- a/_posts/rms46/2020-01-06-log.md
+++ b/_posts/rms46/2020-01-06-log.md
@@ -6,5 +6,5 @@ date: 2020-01-08
 author: "RMS46"
 ---
 
-Bandingkan date Front Matter di atas dengan nama berkas!
+Bandingkan date URL (Front Matter) di atas dengan nama berkas!
 
