rmsbase UF-extra192

--- a/_posts/cbk/2019-12-01-short.md
+++ b/_posts/cbk/2019-12-01-short.md
@@ -1,8 +1,6 @@
 ---
-layout: post
-title: "A Short Post Example"
-author: Cicak Bin Kadak
-categories: etc cbk
 ---
+
+# A Short Post Example
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
