--- a/_posts/say217/2020-01-12-say217-log.md
+++ b/_posts/say217/2020-01-12-say217-log.md
@@ -5,6 +5,8 @@ categories: log say217
 author: "say217"
 ---
 
+#12 Januari 2020#
+
 Pada tanggal 12 Januari 2020 saya dan teman-teman extra192 berhasil mem-burn image raspbian ke microsd dan juga telah berhasil membackup image tersebut dengan menggunakan command dd dengan argumen if="path-to-sdcard" dan of="path-to-img-file".  
 setelah itu kami juga sudah berhasil membuat 5 akun tambahan selain super user pi berdasarkan id github kami.  
 Kami juga sudah berhasil membuat raspberry bisa di akses secara remote dengan cara menyambungkan ke router yang sama, setelah itu kami mencoba untuk membuat untuk bisa dilakukan ssh dengan cara menjadikan raspberry menjadi hotspot namun masih ada beberapa bug yang menyebabkan beberapa device tidak bisa terhubung dengan hotspot tersebut.  
