title for Jan 14 fixed and formatting fixed

--- a/_posts/say217/2020-01-13-say217-log.md
+++ b/_posts/say217/2020-01-13-say217-log.md
@@ -5,7 +5,7 @@ categories: log say217
 author: "say217"
 ---
 
-#13 Januari 2020#
+##13 Januari 2020
 
 
 Senin ini saya berhasil memperbaiki bug yang menyebabkan hanya beberapa client yang bisa terkoneksi ke hotspot dari raspberry pi.  
