--- a/_posts/say217/2020-01-12-say217-log.md
+++ b/_posts/say217/2020-01-12-say217-log.md
@@ -5,7 +5,7 @@ categories: log say217
 author: "say217"
 ---
 
-##12 Januari 2020
+## Minggu, 12 Januari 2020
 
 Pada tanggal 12 Januari 2020 saya dan teman-teman extra192 berhasil mem-burn image raspbian ke microsd dan juga telah berhasil membackup image tersebut dengan menggunakan command dd dengan argumen if="path-to-sdcard" dan of="path-to-img-file".  
 setelah itu kami juga sudah berhasil membuat 5 akun tambahan selain super user pi berdasarkan id github kami.  
