--- a/_posts/say217/2020-01-14-say217-log.md
+++ b/_posts/say217/2020-01-14-say217-log.md
@@ -5,7 +5,8 @@ categories: log say217
 author: "say217"
 ---
 
-##14 Januari 2020
+## Selasa, 14 Januari 2020
+
 
 Kali ini saya melakukan GSGS(google sana google sini) mengenai cara mensetup raspberry menjadi access point tanpa menghilangkan kemampuannya untuk terkoneksi ke internet menggunakan wifi.
 
