--- a/_posts/say217/2020-01-14-say217-log.md
+++ b/_posts/say217/2020-01-14-say217-log.md
@@ -10,8 +10,7 @@ author: "say217"
 
 Kali ini saya melakukan GSGS(google sana google sini) mengenai cara mensetup raspberry menjadi access point tanpa menghilangkan kemampuannya untuk terkoneksi ke internet menggunakan wifi.
 
-Hasil dari gsgs ini yang saya temukan terletak pada link berikut:  
-https://www.raspberrypi.org/forums/viewtopic.php?f=36&t=138730&start=25
+Hasil dari gsgs ini yang saya temukan [di sini](https://www.raspberrypi.org/forums/viewtopic.php?f=36&t=138730&start=25).
 
 Sekian log kali ini, terimakasih
 
