wrong log date fixed

--- a/_posts/say217/2020-01-20-say217-log.md
+++ b/_posts/say217/2020-01-20-say217-log.md
@@ -5,7 +5,7 @@ categories: log say217
 author: "say217"
 ---
 
-## Minggu, 19 Januari 2020
+## Senin, 20 Januari 2020
 
 
 Hari ini saya membenarkan bug dimana wifistart tidak jalan ketika booting.  
